# ChangeLog for x11-plugins/wmmaiload
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmmaiload/ChangeLog,v 1.37 2014/04/24 21:25:24 voyageur Exp $

*wmmaiload-2.3.0 (24 Apr 2014)

  24 Apr 2014; Bernard Cafarelli <voyageur@gentoo.org>
  wmmaiload-2.2.1-r1.ebuild, +wmmaiload-2.3.0.ebuild:
  Fix compilation with current openssl, version bump, fixes bug #507984

  07 Apr 2014; Samuli Suominen <ssuominen@gentoo.org> wmmaiload-2.2.1-r1.ebuild:
  Use EAPI5 instead of EAPI1.

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> wmmaiload-2.2.1-r1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  28 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  wmmaiload-2.2.1-r1.ebuild:
  Fix slot-dep on gtk+

  31 Aug 2010; Michele Noberasco <s4t4n@gentoo.org> wmmaiload-2.2.1-r1.ebuild,
  files/wmmaiload-2.2.1-checkthread.patch:
  Fixed nasty bug the wmmaiload compilation fails and a *binary version present in the tarball* is installed.
  Fixes bug #334001.

  04 Jun 2009; Tiago Cunha <tcunha@gentoo.org> wmmaiload-2.2.1-r1.ebuild:
  stable sparc, bug 215651

  22 Jan 2008; Samuli Suominen <drac@gentoo.org> -wmmaiload-1.0.2.ebuild,
  -wmmaiload-2.2.1.ebuild:
  Remove unused GTK+-1.2 versions.

  22 Jan 2008; Brent Baude <ranger@gentoo.org> wmmaiload-2.2.1-r1.ebuild:
  Marking wmmaiload-2.2.1-r1 ~ppc64 for bug 205388

  22 Jan 2008; Brent Baude <ranger@gentoo.org> wmmaiload-2.2.1-r1.ebuild:
  Marking wmmaiload-2.2.1-r1 ppc for bug 205388

  14 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  wmmaiload-2.2.1-r1.ebuild:
  stable x86, bug 205388

*wmmaiload-2.2.1-r1 (12 Jan 2008)

  12 Jan 2008; Samuli Suominen <drac@gentoo.org>
  +files/wmmaiload-2.2.1-gtk.patch, +wmmaiload-2.2.1-r1.ebuild:
  Use GTK+-2 and mark amd64 stable wrt #205388

  12 Jan 2008; Santiago M. Mola <coldwind@gentoo.org>
  wmmaiload-1.0.2.ebuild, wmmaiload-2.2.1.ebuild:
  Add libXpm to DEPEND (#204541), depend on =x11-libs/gtk+-1*, misc QA fixes.