@@ -1,11 +1,11 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmmaiload/wmmaiload-2.2.1-r1.ebuild,v 1.11 2014/04/24 21:25:24 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmmaiload/wmmaiload-2.2.1-r1.ebuild,v 1.12 2014/08/10 20:07:24 slyfox Exp $
 
 EAPI=5
 inherit eutils toolchain-funcs
 
-DESCRIPTION="dockapp that monitors one or more mailboxes."
+DESCRIPTION="dockapp that monitors one or more mailboxes"
 HOMEPAGE="http://tnemeth.free.fr/projets/dockapps.html"
 SRC_URI="http://tnemeth.free.fr/projets/programmes/${P}.tar.gz"
 
