@@ -1,6 +1,10 @@
 # ChangeLog for x11-plugins/wmmaiload
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmmaiload/ChangeLog,v 1.37 2014/04/24 21:25:24 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmmaiload/ChangeLog,v 1.38 2014/08/10 20:07:24 slyfox Exp $
+
+  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> wmmaiload-2.2.1-r1.ebuild,
+  wmmaiload-2.3.0.ebuild:
+  QA: drop trailing '.' from DESCRIPTION
 
 *wmmaiload-2.3.0 (24 Apr 2014)
 
